--- a/amplify/backend/function/TwitchQuestions/src/package.json
+++ b/amplify/backend/function/TwitchQuestions/src/package.json
@@ -7,7 +7,8 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "aws-sdk": "^2.415.0"
+    "aws-sdk": "^2.415.0",
+    "cors": "^2.8.3"
   },
   "devDependencies": {},
   "scripts": {
