--- a/amplify/backend/function/TwitchQuestions/src/package.json
+++ b/amplify/backend/function/TwitchQuestions/src/package.json
@@ -7,7 +7,7 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "6.0.0",
     "aws-sdk": "^2.415.0",
     "cors": "^2.8.3",
     "uuid": "^3.3.2"
