--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack --mode production",
+    "build": "tailwind build src/tailwind.css -c tailwind.config.js -o src/styles/index.css",
     "start": "webpack-dev-server --mode development",
     "host": "webpack-dev-server --mode development --devrig"
   },
@@ -18,9 +18,10 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -29,9 +30,13 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
+    "postcss-cli": "^8.3.1",
+    "postcss": "^8.2.4",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
+    "tailwindcss": "^2.0.2",
+    "postcss-loader": "^4.1.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
