--- a/amplify/backend/function/TwitchQuestions/src/package.json
+++ b/amplify/backend/function/TwitchQuestions/src/package.json
@@ -10,7 +10,8 @@
     "express-jwt": "6.0.0",
     "aws-sdk": "^2.415.0",
     "cors": "^2.8.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {},
   "scripts": {
