--- a/amplify/backend/function/TwitchQuestions/src/package.json
+++ b/amplify/backend/function/TwitchQuestions/src/package.json
@@ -11,7 +11,8 @@
     "aws-sdk": "^2.415.0",
     "cors": "^2.8.3",
     "uuid": "^3.3.2",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "node-fetch": "2.6.1"
   },
   "devDependencies": {},
   "scripts": {
