--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "core-js": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.15.1"
   },
   "babel": {
     "presets": [
